modules/040-node-manager/images/cluster-autoscaler/patches/1.32/README.md
## Patches

### 001-go-mod.patch

Bumps Go module dependencies to remediate CVEs reported by Trivy for the
cluster-autoscaler binary. The vulnerabilities live in indirect/build
dependencies that are linked into the binary (x/crypto/ssh, x/net, k8s
staging modules), not in cluster-autoscaler logic, so the fix is a pure
`go.mod`/`go.sum` bump. The gardener tag stays `v1.32.3`.

Applied to both `cluster-autoscaler/go.mod` and `cluster-autoscaler/apis/go.mod`:

- `go` directive: `1.23.0` (+ `toolchain go1.23.2`) -> `1.25.0`
- `google.golang.org/grpc`: `v1.65.0` -> `v1.82.1`
- `golang.org/x/net`: `v0.38.0` -> `v0.56.0` (HTML parser / HTTP2 / idna CVEs)
- `golang.org/x/text`: `v0.23.0` -> `v0.39.0` (Unicode processing CVEs)
- `golang.org/x/sys`: `v0.31.0` -> `v0.46.0`
- `golang.org/x/crypto`: `v0.36.0` -> `v0.53.0` (x/crypto/ssh CVEs)
- `github.com/google/cel-go`: left at `v0.22.0` (apiserver 0.32.x incompatible with cel-go >= v0.29; GO-2026-6094 covered by VEX — NativeTypes/ParseStructTag not used)
- `azidentity`: `v1.5.2` -> `v1.6.0`; `jwt/v4`: `v4.5.0` -> `v4.5.2`
- `github.com/opencontainers/runc`: `v1.2.1` -> `v1.2.9`. This does not change
  the image — no runc package is linked into the 1.32 binary, so scanners report
  no runc findings here and `go version -m cluster-autoscaler` lists the same
  module set with and without the pin. It is kept only to keep the module graph
  free of a known-vulnerable version and to stay in sync with the release
  branches that still build 1.31, where runc *is* linked in
- `k8s.io/kubernetes`: `v1.32.0` -> `v1.32.10`, and all `k8s.io/*` staging
  modules (require + replace) synced to `v0.32.10` (kube-controller-manager
  SSRF, CVE-2025-13281)

To recreate this patch, check out the clean tag and re-apply the bumps:

```shell
git clone <SOURCE_REPO>/gardener/autoscaler.git
cd autoscaler && git checkout v1.32.3
cd cluster-autoscaler
go get google.golang.org/grpc@v1.82.1 \
  golang.org/x/crypto@v0.53.0 \
  golang.org/x/net@v0.56.0 \
  golang.org/x/sys@v0.46.0 \
  golang.org/x/text@v0.39.0 \
  github.com/Azure/azure-sdk-for-go/sdk/azidentity@v1.6.0 \
  github.com/golang-jwt/jwt/v4@v4.5.2 \
  github.com/opencontainers/runc@v1.2.9
go get k8s.io/kubernetes@v1.32.10
# sync every k8s.io/* require and replace directive to v0.32.10
cd apis
go get google.golang.org/grpc@v1.82.1 \
  golang.org/x/net@v0.56.0 \
  golang.org/x/text@v0.39.0
cd ..
go mod tidy && (cd apis && go mod tidy)
cd ..
git diff -- cluster-autoscaler/go.mod cluster-autoscaler/go.sum \
            cluster-autoscaler/apis/go.mod cluster-autoscaler/apis/go.sum \
  > 001-go-mod.patch
```

### 002-kruise-ads.patch

TODO: add description

### 003-scale-from-zero.patch

TODO: add description

### 004-set-priorities-for-to-de-deleted-machines-and-clean-annotation.patch

Remove additional cordoning nodes from mcm cloud provider.

New autoscaler works with new version MCM witch select nodes for deleting from annotation `node.machine.sapcloud.io/trigger-deletion-by-mcm`
This annotation does not support by our MCM, and we should set deleting priority with annotation `machinepriority.machine.sapcloud.io`.
We set priority for machines and keep `node.machine.sapcloud.io/trigger-deletion-by-mcm` annotation for calculation replicas,
but we need to clean deleted machines from annotation in refresh function for keeping up to date annotation value to avoid
drizzling replicas count in machine deployment.

### 005-report-all-machine-creation-errors-to-ca.patch

Report all machine creation errors to Cluster Autoscaler, not only ResourceExhausted

Previously, generateInstanceStatus only reported ErrorInfo to the Cluster Autoscaler when a Machine failed with ResourceExhausted error code (quota/stockout).
All other creation failures (invalid image, wrong credentials, network errors, etc.) returned InstanceStatus without ErrorInfo, making them invisible to CA's error handling.

### 006-fix-upcoming-nodes-deadlock-for-failed-node-groups.patch

Exclude upcoming nodes for groups without active scale-up requests or are backed off in cluster state handling.
 
GetUpcomingNodes() counts upcoming nodes based solely on target - registered, without checking whether the scale-up is still actively in progress.
When instance creation fails, handleInstanceCreationErrors removes the scaleUpRequest (by decrementing Increase to zero), 
but GetUpcomingNodes() continues to report upcoming nodes because the target size was never decreased.

This patch adds two guards in GetUpcomingNodes() to skip counting upcoming nodes when:

- There is no active scaleUpRequest for the node group (indicating the previous scale-up attempt has failed or timed out)
- The node group is in backoff state

This breaks the deadlock: pods remain unschedulable, ScaleUp() is invoked, and the priority expander can fall back to a working lower-priority node group.
